[package]
name = "tvheadproxy"
version = "0.1.0"
authors = ["Simon Dickson <simonhdickson@users.noreply.github.com>"]
description = """
tvheadproxy is an app that proxies tvheadend so it can be used with Plex DVR.
"""
documentation = "https://github.com/simonhdickson/tvheadproxy"
homepage = "https://github.com/simonhdickson/tvheadproxy"
repository = "https://github.com/simonhdickson/tvheadproxy"
readme = "readme.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "2.0"
log = "0.4"
reqwest = { version = "=0.9.17", default-features = false }
pretty_env_logger = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
url = "2.1"
warp = "0.1"
